--- a/template_report/main.tex
+++ b/template_report/main.tex
@@ -20,7 +20,7 @@
 %%% Flushend: You can add this package to automatically balance the final page, but if things go awry (e.g. section contents appearing out-of-order or entire blocks or paragraphs are coloured), remove it!
 % \usepackage{flushend}
 
-\title{Template for GigaScience Journal Manuscript Submissions}
+\title{Omogeneizzazione numerica di materiali microstrutturati}
 
 %%% Use the \authfn to add symbols for additional footnotes, if any. 1 is reserved for correspondence emails; then continuing with 2 etc for contributions.
 \author{Mastrofini Alessandro}
