--- a/report/paper-refs.bib
+++ b/report/paper-refs.bib
@@ -2,10 +2,85 @@
 	Author = {Cowin, Sthepen },
 	Publisher = {CRC Press},
 	Title = {Bone Mechanics Handbook},
-	pages = {320},
-	Year = {2001}}
+	pages = {10-9},
+	Year = {2001},}
+
+  @Article{CC21,
+	author =   {Cowin, Sthepen },
+	title =    {Integrated Bone Tissue Physiology},
+	journal =      {Bone Mechanics Handbook},
+	year =     {2001},
+	volume =   {1},
+	pages =    {4-5},
+}
+
+
+  @Article{Dalstra:93,
+	author =   {Dalstra, M. and Huiskes, R. and Odgaard, A. and Van Erning, L.},
+	title =    {Mechanical and textural properties of pelvic trabecular bone},
+	journal =      {Journal of biomechanics},
+	year =     {1993},
+	volume =   {26},
+	pages =    {523-35},
+	url={https://doi.org/10.1016/0021-9290(93)90014-6},
+}
+
+  @Article{Wirtz:2000,
+	author =   {Wirtz, D. C. and Schiffers, N. and Pandorf, T. and Radermacher, K. and Weichert, D. and Forst, R.},
+	title =    {Critical evaluation of known bone material properties to realize anisotropic FE-simulation of the proximal femur},
+	journal =      {Journal of biomechanics},
+	year =     {2000},
+	volume =   {33},
+	pages =    {1325-30},
+	url={https://doi.org/10.1016/s0021-9290(00)00069-5},
+}
+
+  @Article{Jansen:2015,
+	author =   {Jansen, L. E. and Birch, N. P. and Schiffman, J. D. and Crosby, A. J. and Peyton, S. R.},
+	title =    {Mechanics of intact bone marrow},
+	journal =      {Journal of the mechanical behavior of biomedical materials},
+	year =     {2015},
+	volume =   {50},
+	pages =    {299-307},
+	url={https://doi.org/10.1016/j.jmbbm.2015.06.023},
+}
+
+ @Article{Mastrofini:21 ,
+	author =      {Mastrofini, Alessandro},
+	title=        {Image processing volumetrico su osso trabecolare},
+	year =        {2021},
+	journal =     {website},
+	volume =   {},
+	pages =    {},
+	url={https://alessandromastrofini.it/image-volumetric-bone/},
+}
+
+  @Article{ESA:2005,
+	author =   {Beller, Gisela and Burkhart, Markus and Felsenberg, Dieter and Gowin, Wolfgang and Hege, Hans-Christian and Koller, Bruno and Prohaska, Steffen and Saparin, Peter I. and Thomsen,  Jesper S.},
+	title =    {Vertebral Body Data Set ESA29-99-L3},
+	journal =      {},
+	year =     {2005},
+	volume =   {},
+	pages =    {},
+	url={http://bone3d.zib.de/data/2005/ESA29-99-L3/},
+}
+
+
 
 %
+
+  @Article{citename,
+	author =   {},
+	title =    {},
+	journal =      {},
+	year =     {},
+	volume =   {},
+	pages =    {},
+	url={},
+}
+
+%
+
 
 @Book{Anderberg83,
    author =   {Anderberg, M. R.},
