--- a/report/main.tex
+++ b/report/main.tex
@@ -153,6 +153,9 @@ DESCRIVI OSSO TRABECOLARE DA COWIN e LIBRO ISTOLOGIA
 \section{Omogenizzazione}
 
 \subsection{Stime analitiche}
+
+PARLA DI VOIGT E REUSS 
+
 \begin{table}[bt!]
 	\caption{Parametri materiali}\label{tab:example}
 	\begin{tabular}{l r l}
@@ -173,9 +176,10 @@ DESCRIVI OSSO TRABECOLARE DA COWIN e LIBRO ISTOLOGIA
 		\item \textsuperscript{*}Parametri calcolati
 	\end{tablenotes}
 \end{table}
+
 \subsection{Volume di interesse}
 \label{sec:RVE}
-PARTE SUL CODICE SNIPPET
+PARTE SUL CODICE SNIPPET E SULLA CREAZIONE DELL RVE 
 
 \subsection{Omogenizzazione numerica}
 \label{sec:homogen}
@@ -206,6 +210,8 @@ L'immagine presentata in figura \ref{fig:homogen_RVE}(a) è una ricostruzione 3D
 \texttt{Image Region Analyzer} in Matlab per averne conferma. Queste considerazioni, e soprattutto il volume 3D, hanno permesso di arrivare all'idealizzazione del volume di interesse presentata in  \cref{sec:RVE}
 
 \subsection{Rappresentazione del volume di riferimento}
+
+
 
 \begin{lstlisting}[language=Mathematica,caption=Generazione RVE]
 $\Omega$ext=Rectangle[{0,0},{Lx,Ly}];
