--- a/report/paper-refs.bib
+++ b/report/paper-refs.bib
@@ -1,9 +1,33 @@
+@incollection{ABOUDI201387,
+	title = {Chapter 3 - Fundamentals of the Mechanics of Multiphase Materials},
+	editor = {Jacob Aboudi and Steven M. Arnold and Brett A. Bednarcyk},
+	booktitle = {Micromechanics of Composite Materials},
+	publisher = {Butterworth-Heinemann},
+	address = {Oxford},
+	pages = {87-145},
+	year = {2013},
+	isbn = {978-0-12-397035-0},
+	doi = {https://doi.org/10.1016/B978-0-12-397035-0.00003-3},
+	url = {https://www.sciencedirect.com/science/article/pii/B9780123970350000033},
+	author = {Jacob Aboudi and Steven M. Arnold and Brett A. Bednarcyk}
+}
 @book{Cowin1,
 	Author = {Cowin, Sthepen },
 	Publisher = {CRC Press},
 	Title = {Bone Mechanics Handbook},
 	pages = {10-9},
 	Year = {2001},}
+
+
+@Article{Doktor:2011,
+	author =   {Doktor, Tomáš and Valach, Jaroslav and Kytyr, Dan and Jiroušek, Ondřej},
+	title =    {Pore Size Distribution of Human Trabecular Bone - Comparison of Intrusion Measurements with Image Analysis},
+	journal =      {Engineering Mechanics},
+	year =     {2011},
+	volume =   {Mat},
+	pages =    {},
+	}
+
 
   @Article{CC21,
 	author =   {Cowin, Sthepen },
