--- a/FEM/homogen/normC.tex
+++ b/FEM/homogen/normC.tex
@@ -9,7 +9,16 @@
 \newcounter{mathematicapage}
 \begin{document}
 
-\[\{1.45073\times 10^6,1.4568\times 10^6,1.20853\times 10^6,1.18119\times 10^6,1.16804\times 10^6,1.16804\times 10^6,1.16645\times 10^6,1.16021\times
-10^6,1.15759\times 10^6,1.15747\times 10^6\}\]
+\[\{
+1.45073\times 10^6
+1.4568\times 10^6
+1.20853\times 10^6
+1.18119\times 10^6
+1.16804\times 10^6
+1.16804\times 10^6
+1.16645\times 10^6
+1.16021\times10^6
+1.15759\times 10^6
+1.15747\times 10^6\}\]
 
 \end{document}
