--- a/report/main.tex
+++ b/report/main.tex
@@ -418,7 +418,7 @@ Analizzando i risultati è stato preso come valore ottimo quello ottenuto nell'i
 
 Tutto il codice, le immagini, file di processamento e risultati ottenuti sono disponibili alla repository online al link: \url{https://github.com/mastroalex/bone-homogenization}. 
 
-Il codice per l'analisi di convergenza (\cref{sec:convergenza}) è presente nel file \texttt{test\_analisi\_conv.nb}.
+Il codice per l'analisi di convergenza (\cref{sec:convergenza}) è presente nel file \texttt{FEM->homogen->test\_analisi\_conv.nb}.
 
 
 \subsection{Lista delle abbreviazioni}
