--- a/report/main.tex
+++ b/report/main.tex
@@ -365,7 +365,8 @@ Analizzando i risultati è stato preso come valore ottimo quello ottenuto nell'i
 
 \begin{figure}[bt!] %% preferably at bottom or top of column
 	\centering
-	\includegraphics[width=\linewidth]{test_data.pdf}
+  \def\svgwidth{\linewidth}
+\input{test_data.pdf_tex}
 	\caption{Analisi dell'errore sul parametro $\mathbb C_{11}$}\label{fig:convergence}
 \end{figure}
 
